ChangeLog for herdstat

2005-04-18 Aaron Walker <ka0ttic@gentoo.org>

	* src/formatter.cc: fixed bug in append(string, vector) that caused an
	abort if data.size() == 0.  Thanks to tove for the heads up.
	* lib/portage_misc.cc, lib/portage_misc.hh: Move find_package to
	find_package_in and make find_package take a config_T object and call
	find_package_in for PORTDIR and PORTDIR_OVERLAY's.  Moved
	search_overlays here from meta action handler.  Also added an
	overloaded ebuild_which that takes a portdir.  The original
	ebuild_which now does it's work and then calls the new ebuild_which
	for each portdir.  This fixed a bug where the metadata would be
	retrieved from one directory and the ebuild data from another (in the
	case of an overlay).
	* src/action_meta_handler.cc, src/action_versions_handler.cc: Modified
	to use new find_package() which means it now respects PORTDIR_OVERLAY
	as it should.  Modified meta handler to display any overlays that any
	queries came from.

2005-04-16 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_versions_handler.cc, src/action_versions_handler.hh:
	Added versions action handler for just displaying package versions.

	* configure.ac: Updated version (1.1.0_pre1)
	* lib/vars.cc, lib/vars.hh: Fixed bug where any reference to a
	variable not yet in the var map would not get replaced.  Added subst()
	method to accomplish this, which recursively calls itself until all
	variable occurences have been replaced (unless we can't find it of
	course).
	* src/options.cc: Instead of saving portage::config_T::portdir(), save
	the config_T object itself.
	* lib/portage_config.hh: Added a operator<< for portage::config_T so
	that it can properly be stored in option_T::option_map_T.  Dumps
	entire portage config along with the rest of our options when --debug
	is specified.
	* src/action_meta_handler.cc: Fixed bug that caused funky formatting
	in --metadata output when multiple url's are listed in ${HOMEPAGE}.
	Added search_overlays().
