@@ -1,8 +1,11 @@
-<!-- Automagically generated by the ToDo program on 2005-04-19 -->
+<!-- Automagically generated by the ToDo program on 04/19/05, 10:28 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
+    <note priority="veryhigh" time="1113920911">
+        Fix --fetch --quiet bug (it's not quiet).
+    </note>
     <note priority="medium" time="1113548810">
         IDEA: maybe make a --summary option for the package handler that prints total # of pkgs, #pkgs per category, etc
     </note>
