@@ -37,35 +37,29 @@
 #include "util.hh"
 
 /*
- * Try to determine if the current directory is
- * a valid package directory.
+ * Determine whether or not the current directory is
+ * a valid package directory.  Must have a Manifest,
+ * at least one ebuild, and a files directory.
  */
 
 bool
 portage::in_pkg_dir()
 {
-    const char *pwd = util::getcwd().c_str();
-    DIR *dir = NULL;
-    struct dirent *d = NULL;
-    bool ebuild = false, filesdir = false;
+    const util::dir_T dir(util::getcwd());
+    bool ebuild = false, filesdir = false, manifest = false;
 
-    if (not (dir = opendir(pwd)))
-	throw util::bad_fileobject_E(pwd);
-
-    while ((d = readdir(dir)))
+    util::dir_T::const_iterator d;
+    for (d = dir.begin() ; d != dir.end() ; ++d)
     {
-	char *s = NULL;
-	if ((s = std::strrchr(d->d_name, '.')))
-	{
-	    if (std::strcmp(++s, "ebuild") == 0)
-		ebuild = true;
-	}   
-	else if (std::strcmp(d->d_name, "files") == 0)
-	    filesdir = true;
+        if (portage::is_ebuild(*d))
+            ebuild = true;
+        else if (*d == "Manifest")
+            manifest = true;
+        else if (*d == "files")
+            filesdir = true;
     }
 
-    closedir(dir);
-    return (ebuild and filesdir);
+    return (ebuild and filesdir and manifest);
 }
 
 /*
